unpackaged/main/default/objects/OpportunityLineItem/fields/Additional_Price__c.field-meta.xml
<CustomField>
    <fullName>Additional_Price__c</fullName>
    <description>Product or Module price not calculated in Licence Fee</description>
    <inlineHelpText>Product or Module price not calculated in Licence Fee</inlineHelpText>
    <label>Additional Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>