unpackaged/main/default/objects/OpportunityLineItem/fields/Discount_Value__c.field-meta.xml
<CustomField>
    <fullName>Discount_Value__c</fullName>
    <label>Discount Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>