unpackaged/main/default/objects/OpportunityLineItem/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>Expiry Date</description>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>