unpackaged/main/default/objects/OpportunityLineItem/fields/Licences__c.field-meta.xml
<CustomField>
    <fullName>Licences__c</fullName>
    <label>Licences</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>