unpackaged/main/default/objects/OpportunityLineItem/fields/MarketPrice__c.field-meta.xml
<CustomField>
    <fullName>MarketPrice__c</fullName>
    <label>Market Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>