unpackaged/main/default/objects/OpportunityLineItem/fields/Pricebook_Overridden__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Overridden__c</fullName>
    <formula>Opportunity.Pricebook_Overridden__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricebook Overridden</label>
    <type>Checkbox</type>
</CustomField>