unpackaged/main/default/objects/OpportunityLineItem/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.Family)</formula>
    <label>Product</label>
    <type>Text</type>
</CustomField>