unpackaged/main/default/objects/OpportunityLineItem/fields/Product_or_Module__c.field-meta.xml
<CustomField>
    <fullName>Product_or_Module__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.Product_or_Module__c)</formula>
    <inlineHelpText>Automatically calculated from product</inlineHelpText>
    <label>Product or Module</label>
    <type>Text</type>
</CustomField>