unpackaged/main/default/objects/OpportunityLineItem/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <formula>Opportunity.Solution_Code__c</formula>
    <inlineHelpText>Calculated from Solution in Opportunity</inlineHelpText>
    <label>Solution</label>
    <type>Text</type>
</CustomField>