unpackaged/main/default/objects/OpportunityLineItem/validationRules/Priceb.validationRule-meta.xml
<ValidationRule>
    <fullName>Priceb</fullName>
    <active>true</active>
    <errorConditionFormula>Opportunity.Pricebook_Overridden__c == true &amp;&amp; $Profile.Name &lt;&gt; &#39;System Administrator&#39;</errorConditionFormula>
    <errorMessage>Pricing has been updated via Pricebook. Please amend quote and re-upload via Pricebook</errorMessage>
</ValidationRule>